add: testGame
