# server/initialize/gorm.go
@@ -52,6 +52,7 @@ func MysqlTables(db *gorm.DB) {
 
 		// Code generated by gin-vue-admin Begin; DO NOT EDIT.
 		model.TestTv{},
+		model.TestGame{},
 		// Code generated by gin-vue-admin End; DO NOT EDIT.
 	)
 	if err != nil {
