# server/model/request/test_game.go
@@ -1,0 +1,8 @@
+package request
+
+import "gin-vue-admin/model"
+
+type TestGameSearch struct{
+    model.TestGame
+    PageInfo
+}
